# prog-5-ussd

./: .flake8  .gitignore  README.md  compte.py  format.sh  install.sh  lint.sh  main.py  pyproject.toml
.github/workflows/: linter.yml  test.yml
display/: components.py  core.py
src/: compte.py  utils.py
src/display/: components.py  core.py
tests/: test_utils.py
